compiler-core/src/parse/snapshots/gleam_core__parse__tests__parsing_invalid_external_function_name.snap
---
source: compiler-core/src/parse/tests.rs
expression: "\n@external(erlang, \"module\", Upname)\nfn wibble() -> Nil\n"
---
----- SOURCE CODE

@external(erlang, "module", Upname)
fn wibble() -> Nil


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:2:29
  │
2 │ @external(erlang, "module", Upname)
  │                             ^^^^^^ I was not expecting this

Found a name, expected one of: 
- a string
