compiler-core/src/parse/snapshots/gleam_core__parse__tests__prepend_to_const_list_without_comma.snap
---
source: compiler-core/src/parse/tests.rs
expression: "\nconst wibble = [2, 3]\nconst wobble = [1 ..wibble]\n"
---
----- SOURCE CODE

const wibble = [2, 3]
const wobble = [1 ..wibble]


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:3:19
  │
3 │ const wobble = [1 ..wibble]
  │                   ^^ I was not expecting this

Found `..`, expected one of: 
- `]`
- a constant value
