compiler-core/src/parse/snapshots/gleam_core__parse__tests__private_internal_type.snap
---
source: compiler-core/src/parse/tests.rs
expression: "\n@internal\ntype Wibble {\n  Wibble\n}\n"
---
----- SOURCE CODE

@internal
type Wibble {
  Wibble
}


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:2:1
  │
2 │ @internal
  │ ^^^^^^^^^ Redundant internal attribute

Only a public definition can be annotated as internal.

Hint: Remove the `@internal` annotation.
